[package]
name = "fairplay"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI Argümanlarını parse etmek için
clap = { version = "4.4", features = ["derive"] }
# Asenkron runtime (API istekleri için)
tokio = { version = "1.35", features = ["full"] }
# HTTP client (IPFS API'siyle konuşmak için)
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Terminalde zaman/tarih işlemleri
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
base64 = "0.22"
multibase = "0.9.2"
cli-table = "0.5.0"
tar = "0.4.45"
indicatif = "0.18.4"
uuid = { version = "1.23.1", features = ["v4"] }
